--- a/style.css
+++ b/style.css
@@ -1,59 +1,27 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 html,
 body,
 
-h1 {
-  font-size: 40px;
-}
-
-h2 {
-  font-size: 25px;
-  text-align: center;
-  margin: 5px;
-  padding: 10px;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(14, 6, 6);
-}
-.wrapper {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  font-family: sans-serif;
   background-image: url("assets/2413176.jpg");
   background-color: rgb(197, 175, 147);
-}
-
-.disc {
-    font-size: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bolder;
-    margin: 5px 40px 5px 40px;
-    padding: 20px
-}
-
-.wrapper {
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 header {
   text-align: center;
   padding: 20px;
-  padding-top: 0px;
   color: hsl(292, 15%, 20%);
-  text-decoration: underline;
+  text-decoration: underline rgb(179, 16, 16);
+  position: relative;
+  margin: 5px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.disc {
+  font-size: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bolder;
+  margin: 5px 40px 5px 40px;
+  text-align: center;
 }
 
 .card {
@@ -62,6 +30,12 @@ header {
   color: hsl(294, 9%, 44%);
   font-size: 18px;
   padding: 20px 30px;
+  height: 500px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .card-body {
@@ -69,67 +43,92 @@ header {
   text-align: center;
   display: flex;
   justify-content: center;
-
 }
-
-.card-footer {
-  text-align: center;
-}
-
 
 .mission {
   font-size: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
   margin: auto;
-  padding: 30px;
-  border: 5px solid black;
-
+  padding: 15px;
+  border: 2px solid rgb(179, 16, 16);
+  color: hsl(292, 15%, 20%);
 }
 
 #generate-link {
   margin: 15px;
   padding: 15px;
+  text-decoration: none;
 }
 
 #generate-link img { 
   width: 200px;
   height: 200px;
-  border-radius: 150px;
+  border-radius: 100%;
   justify-content: 100px;
+  border: 5px solid black;
 }
 
 .link-text {
   background-color:rgb(179, 16, 16);
-  color: whitesmoke;
+  color: white;
   border-radius: 5px;
+  text-decoration: none; 
+  font: 600;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  width: 200px;
+  align-items: center;
 }
 
 #build-link {
   margin: 15px;
   padding: 15px;
+  text-decoration: none;
 }
 
 #build-link img {
   width: 200px;
   height: 200px;
-  border-radius: 150px;
-
+  border-radius: 100%;
+  border: 5px solid black;
 }
 
-@media (max-width: 690px) {
-  .btn {
-    font-size: 1rem;
-    margin: 16px 0px 0px 0px;
-    padding: 10px 15px;
-  }
-
-  #password {
-    font-size: 1rem;
-  }
+#dragon1 {
+  width: 100%;
+  height: 100%;
+  transform: scaleX(-1);
+  margin: 0px 50px;
 }
 
-@media (max-width: 500px) {
-  .btn {
-    font-size: 0.8rem;
-  }
+#dragon2 {
+  width: 100%;
+  height: 100%;
+  margin: 0px 50px;
 }
+
+.link-items {
+  width: 500px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-us {
+ float:left;
+ width:50%;
+ text-align: center;
+ font-size: 15px;
+ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-weight: 600;
+}
+.credits {
+float:right;
+width: 50%;
+text-align: center;
+font-size: 15px;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-weight: 600;
+}
+
