--- a/style.css
+++ b/style.css
@@ -1,137 +1,145 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 html,
 body,
-.wrapper {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 
 body {
-  font-family: sans-serif;
-  background-color: #ffffff;
-}
-
-.wrapper {
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
+  background-image: url("assets/2413176.jpg");
+  background-color: rgb(197, 175, 147);
 }
 
 header {
   text-align: center;
   padding: 20px;
-  padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(292, 15%, 20%);
+  text-decoration: underline rgb(179, 16, 16);
+  position: relative;
+  margin: 5px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+}
+
+.disc {
+  font-size: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bolder;
+  margin: 5px 40px 5px 40px;
+  text-align: center;
 }
 
 .card {
-  text-align: center;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 5px;
+  border-radius: 25px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(294, 9%, 44%);
   font-size: 18px;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 30px 40px;
-}
-
-.card-header::after {
-  content: " ";
-  display: block;
+  height: 500px;
   width: 100%;
-  background: #38040e;
-  height: 2px;
+  display: flex;
+  justify-content: center;
 }
 
 .card-body {
   min-height: 100px;
-}
-
-.card-footer {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.card-footer::before {
-  content: " ";
-  display: block;
+.mission {
+  font-size: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-weight: bold;
+  margin: auto;
+  padding: 15px;
+  border: 2px solid rgb(179, 16, 16);
+  color: hsl(292, 15%, 20%);
+}
+
+#generate-link {
+  margin: 15px;
+  padding: 15px;
+  text-decoration: none;
+}
+
+#generate-link img { 
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  justify-content: 100px;
+  border: 5px solid black;
+}
+
+#generate-link img:hover{
+  width: 225px;
+  height: 225px;
+}
+
+.link-text {
+  background-color:rgb(179, 16, 16);
+  color: white;
+  border-radius: 5px;
+  text-decoration: none; 
+  font: 600;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#build-link {
+  margin: 15px;
+  padding: 15px;
+  text-decoration: none;
+}
+
+#build-link img {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  border: 5px solid black;
+}
+
+#build-link img:hover{
+  width: 225px;
+  height: 225px;
+}
+
+#dragon1 {
   width: 100%;
-  background: #e7e9eb;
-  height: 2px;
+  height: 100%;
+  transform: scaleX(-1);
+  margin: 0px 100px 30px 100px;
 }
 
-.card-footer::after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
-.btn {
-  border: none;
-  background-color: hsl(360, 91%, 36%);
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  color: hsl(0, 0%, 100%);
-  display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
-  text-align: center;
-  cursor: pointer;
-}
-
-button[disabled] {
-  cursor: default;  
-  background: #c0c7cf;
-}
-
-.float-right {
-  float: right;
-}
-
-#password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  display: block;
+#dragon2 {
   width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
-  font-size: 1.2rem;
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
-  border-radius: 6px;
-  resize: none;
-  overflow: hidden;
+  height: 100%;
+  margin: 0px 100px 30px 100px;
 }
 
-@media (max-width: 690px) {
-  .btn {
-    font-size: 1rem;
-    margin: 16px 0px 0px 0px;
-    padding: 10px 15px;
-  }
-
-  #password {
-    font-size: 1rem;
-  }
+.link-items {
+  width: 500px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (max-width: 500px) {
-  .btn {
-    font-size: 0.8rem;
-  } 
+.contact-us {
+ float:left;
+ width:50%;
+ text-align: center;
+ font-size: 15px;
+ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-weight: 600;
+}
+
+.contact-us a:hover {
+  font-size: 20px;
+  color: rgb(179, 16, 16);
+}
+.credits {
+float:right;
+width: 50%;
+text-align: center;
+font-size: 15px;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-weight: 600;
+}
+
