--- a/cover.css
+++ b/cover.css
@@ -3,26 +3,27 @@ body,
 
 body {
   background-image: url("assets/2413176.jpg");
-  background-color: rgb(197, 175, 147);
+  background-color: bisque;
 }
 
 header {
   text-align: center;
-  padding: 20px;
+  padding: auto;
   color: hsl(292, 15%, 20%);
   text-decoration: underline rgb(179, 16, 16);
   position: relative;
-  margin: 5px;
+  margin: auto;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .disc {
   font-size: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bolder;
-  margin: 5px 40px 5px 40px;
   text-align: center;
+  width: 50%;
+  margin: auto;
 }
 
 .card {
@@ -34,6 +35,8 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
+  background-color: transparent;
+  box-shadow: none;
 }
 
 .card-body {
@@ -101,16 +104,10 @@ header {
 }
 
 #dragon1 {
-  width: 100%;
-  height: 100%;
   transform: scaleX(-1);
-  margin: 0px 100px 30px 100px;
 }
 
 #dragon2 {
-  width: 100%;
-  height: 100%;
-  margin: 0px 100px 30px 100px;
 }
 
 .link-items {
@@ -142,4 +139,3 @@ font-size: 15px;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 font-weight: 600;
 }
-
