--- a/cover.css
+++ b/cover.css
@@ -15,6 +15,7 @@ header {
   margin: auto;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 25px;
+  justify-content: center;
 }
 
 .disc {
@@ -61,6 +62,7 @@ header {
   margin: 15px;
   padding: 15px;
   text-decoration: none;
+  position: relative;
 }
 
 #generate-link img { 
@@ -86,16 +88,18 @@ header {
 }
 
 #build-link {
-  margin: 15px;
+  width: 100%;
+  margin: auto;
   padding: 15px;
   text-decoration: none;
 }
 
 #build-link img {
-  width: 200px;
+  width: fit-content;
   height: 200px;
   border-radius: 100%;
   border: 5px solid black;
+  object-fit: cover;
 }
 
 #build-link img:hover{
@@ -105,13 +109,30 @@ header {
 
 #dragon1 {
   transform: scaleX(-1);
+  width: fit-content;
+  margin: 1vw;
+  padding:auto;
+}
+
+#dragon1 img {
+  width: 100%;
+  object-fit: cover;
 }
 
 #dragon2 {
+  width: fit-content;
+  margin: 1vw;
+  padding: auto;
 }
 
+#dragon2 img {
+  width: 100%;
+  object-fit: cover;
+}
+
+
 .link-items {
-  width: 500px;
+  width: fit-content;
   padding: 10px;
   display: flex;
   justify-content: center;
@@ -128,8 +149,8 @@ header {
 }
 
 .contact-us a:hover {
-  font-size: 20px;
-  color: rgb(179, 16, 16);
+font-size: 20px;
+color: rgb(179, 16, 16);
 }
 .credits {
 float:right;
@@ -138,4 +159,68 @@ text-align: center;
 font-size: 15px;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 font-weight: 600;
+}
+
+@media (max-width:500px) {
+  .link-items {
+    width: fit-content;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card {
+    border-radius: 25px;
+    border-width: 1px;
+    color: hsl(294, 9%, 44%);
+    font-size: 18px;
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    box-shadow: none;
+  }
+  .contact-us {
+    flex-wrap: wrap;
+    flex-direction: row;
+    height: auto;
+    width: fit-content;
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
+   }
+   
+   .credits {
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: fit-content;
+   font-size: 15px;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-weight: 600;
+   }
+
+   .disc {
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    text-align: center;
+    width: fit-content;
+  }
+  
+  header {
+    text-align: center;
+    padding: auto;
+    color: hsl(292, 15%, 20%);
+    text-decoration: underline rgb(179, 16, 16);
+    position: relative;
+    margin: auto;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    justify-content: center;
+    width: fit-content;
+  }
 }
