--- a/CharacterCreator.css
+++ b/CharacterCreator.css
@@ -17,50 +17,37 @@ body {
     
 .sheet {
     border-radius: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    
-}
-
-.area {
-    display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    width: 700px;
+    margin: auto;
+    padding: 15px;
+    border: 5px;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap
 }
 
 .sheet p {
+    display: flex;
+    width: 300px;
+    justify-content: center;
     border-style: solid;
     border-color: black;
     border-radius: 10px;
     background-color: whitesmoke;
     text-align: center;
-    margin: 1%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.name {
-    width: 47%;
-}
-
-.age {
-    width: 23.5%;
-}
-
-.gender {
-    width: 23.5%;
-}
-
-.race {
-    width: 48%;
-}
-
-.class {
-    width: 48%;
-}
-
-.alignment {
-    width: 48%;
-}
-.traits {
-    width: 48%;
+.area {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
 }
 
 .box{
@@ -74,18 +61,20 @@ body {
     margin: 0 !important;
 }
 
-.right {
-    width: 66.7%;
-    height: 66.7%;
-    margin-right: 0 !important;
+.right{
+    margin:auto;
+    justify-content: center;
 }
 
 .right img {
-    width: 100%;
-    width: 100%;
-    border-style: solid;
-    border-color: black;
+    width:100%;
+    max-width: 300px;
+    height:auto;
+    border: solid black;
+    border-radius: 10px;
+    justify-content: center;
 }
+
 
 .value {
     margin-left: 0 !important;
@@ -99,9 +88,27 @@ body {
     height: 10% !important;
 }
 
-.scroll {
- position: fixed;
-top: 0;
-right: 0;
-height: 75vw;
+#greenDragon{
+    justify-content: center;
+    align-content: center;
+}
+
+#greenDragon img {
+    width:100%;
+    max-width: 500px;
+    height:auto;
+}
+
+#redDragon {
+    width:100%;
+    max-width: 500px;
+    height:auto;
+    justify-content: center;
+    align-content: center;
+}
+
+.charSec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
