--- a/CharacterCreator.css
+++ b/CharacterCreator.css
@@ -3,6 +3,7 @@ body {
     background-image: url("assets/2413176.jpg");
     background-color: rgb(197, 175, 147);
     margin: 5%;
+    margin-top: 0%;
 }
     
 .input-field {
@@ -85,7 +86,7 @@ body {
     height: 15.9%;
 }
 
-.info {
+.inf {
     margin: 1%;
     width: 48% !important;
     height: 10% !important;
@@ -111,6 +112,56 @@ body {
     font-size: 14px;
 }
 
-.button {
-    
+.button-center {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+h1 {
+    color: hsl(292, 15%, 20%);
+    text-decoration: underline rgb(179, 16, 16);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    text-align: center;
+    justify-content: center;
+}
+
+#generate-link img { 
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    justify-content: 100px;
+    border: 5px solid black;
+    float: left;
+  }
+  
+  #generate-link img:hover{
+    width: 225px;
+    height: 225px;
+  }
+
+  .link-items {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+.info {
+margin-top: 5%;
+}
+
+.picture img {
+    max-width: 65%;
+    width: 100%;
+}
+
+.picture {
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.info p {
+    width: 100%;
 }
